# py_discord_db_management

./: README.md  pyproject.toml  requirements.txt
py_discord_db_management/classes/: table.py
py_discord_db_management/views/: table_add_data_view.py  table_categories_view.py
