[project]
name = "dbpyman"
version = "0.1.6"
authors = [
  { name="JanikCodes", email="janiksielaff@gmx.de" },
  { name="Quikz#4385"},
]
description = "A package used to modify & view your MySQL database data dynamically modified by Quikz#4385"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JanikCodes/py_discord_db_management"
"Bug Tracker" = "https://github.com/JanikCodes/py_discord_db_management/issues"
